# PyxelEngine

./: .flake8  .gitignore  .isort.cfg  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: changelog.rst
src/PyxelEngine/: __init__.py  core.py  delegator.py  math.py  math.pyi  monitor.py  random.py  shape.py  time.py  window.py
src/PyxelEngine/io/: monitor.py
src/PyxelEngine2/: __init__.py  core.py  random.py  time.py
src/PyxelEngine3/: core.py  event.py  mouse.py  window.py
test/: engine2_test.py  engine_test.py  event_test.py  glfw_test.py  test_glfw.py  test_shape.py  test_vector.py  vector_test.py  vector_tests.py
test/glfw/: events.c  events.py  test_glfw.py
