[metadata]
name = PyxelEngine
;version =  # Handled by setuptools_scm
url = https://github.com/Mimer29or40/PyxelEngine
download_url = https://github.com/Mimer29or40/PyxelEngine/releases
project_urls =
    Source = https://github.com/Mimer29or40/PyxelEngine
    Bug Reports = https://github.com/Mimer29or40/PyxelEngine/issues
author = Ryan Smith
author_email = Ryan.Smith.Dev.Things@gmail.com
;maintainer = MAINTAINER
;maintainer_email = MAINTAINER_EMAIL
classifiers =
    Development Status :: 1 - Planning
;    Development Status :: 2 - Pre-Alpha
;    Development Status :: 3 - Alpha
;    Development Status :: 4 - Beta
;    Development Status :: 5 - Production/Stable

    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
;license = MIT
;license_file = LICENSE
description = Simple game engine for drawing shapes and textures to a screen
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    GLFW
    OpenGL
    Game
    Game Engine
platforms = any
;provides =
;requires =
;obsoletes =

[options]
;zip_safe =
;install_requires = # Defined in setup.py until PyCharm can detect requirements here
python_requires = >=3.8
;scripts =
;eager_resources =
;dependency_links =
include_package_data = True
packages = find:
package_dir = =src
;namespace_packages =
;py_modules =

;[options.extras_require]
;tests = # Defined in setup.py until PyCharm can detect requirements here

;[options.entry_points]

[options.packages.find]
where = src

;[options.package_data]

;[options.exclude_package_data]

;[options.data_files]
